--- a/README
+++ b/README
@@ -1,3 +1,10 @@
 This is a read me for the git repository in MSI.
 
 Nothing is populated at present
+
+
+Commands to commit the data
+
+git add related_object
+git commit -m "my new message"
+git push origin master
