Saving from home

--- a/README
+++ b/README
@@ -5,6 +5,8 @@ Nothing is populated at present
 
 Commands to commit the data
 
+This commit was done from home
+
 git add related_object
 git commit -m "my new message"
 git push origin master
